Fixed the submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "ImageVector"]
-	path = ImageVector/imagetracerjava
-	url = https://github.com/miguelemosreverte/imagetracerjava
-[submodule "ImageVector/imagetracerjava"]
-	path = ImageVector/imagetracerjava
+[submodule "ImageTracer"]
+	path = ImageTracer/imagetracerjava
 	url = https://github.com/miguelemosreverte/imagetracerjava
